# zadanie_dirwatcher

./: .gitignore  requirements.in  requirements.txt  setup.cfg
dirwatcher/: watcher_api.py  watcher_api_test.py  watcher_service.py
dirwatcher/infrastructure/: checkpoint_store.py  checkpoint_store_test.py
dirwatcher/infrastructure/test_data/: savetest1.json
