[metadata]
name = dirwatcher_kkr
version = 0.0.3
description = Dummy package
long_description = file: README.rst, CHANGELOG.rst, LICENSE.rst
keywords = one, two
license = BSD 3-Clause License
classifiers =
    Framework :: Django
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9

[options]
include_package_data = True
packages = find:
scripts =
    # bin/first.py
    # bin/second.py
install_requires =
    # importlib; python_version == "3.9"

[options.entry_points]
# console_scripts =
#     executable-name = package.module:function

[options.packages.find]
# exclude =
#     dirwatcher
#     dirwatcher.infrastructure
